--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/app.js",
+    "build": "NODE_ENV=production webpack --config webpack.config.prod.js",
     "start:prod": "NODE_ENV=production node server/app.js",
     "dev": "NODE_ENV=development node devServer.js"
   },
